--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,19 @@
     "manifest_version": 3,
     "name": "GlobalCart2",
     "version": "1.0",
-    "permissions": ["storage", "tabs", "runtime"],
+    "permissions": ["storage", "tabs"],
     "background": {
         "service_worker": "background.js"
     },
-    "content_scripts": ["content.js"],
-    "default_popup": "popup.html"
-    
+    "action": {
+        "default_title" : "Global Cart",
+        "default_icon" : "cart.png",
+        "default_popup" : "popup.html"
+      },
+    "icons": { 
+        "16" : "cart.png",
+        "32": "cart.png",
+        "48": "cart.png",
+        "128": "cart.png"
+       }
 }
